selfhosted/kubernetes-manifests/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes-manifests/
    kompose.version: 1.28.0 (HEAD)
  
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes-manifests/
        kompose.version: 1.28.0 (HEAD)
      
      labels:
        io.kompose.network/selfhosted-ddosify: "true"
        io.kompose.service: minio
    spec:
      containers:
        - args:
            - server
            - /data
          image: minio/minio:RELEASE.2023-04-13T03-08-07Z
          name: minio
          ports:
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: minio-data
      restartPolicy: Always
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o kubernetes-manifests/
    kompose.version: 1.28.0 (HEAD)
  
  labels:
    io.kompose.service: minio
  name: minio
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: minio
status:
  loadBalancer: {}
